Finish preprocessing and update planning doc

--- a/Crime_Data_Preprocessing.ipynb
+++ b/Crime_Data_Preprocessing.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Crime Data Preprocessing\n",
-    "As of 3/10/2020, the [dataset](https://data.cityofchicago.org/Public-Safety/Crimes-2001-to-present/ijzp-q8t2) provided by the city of Chicago on crime (excluding murders) contains over 7 millions rows and 22 columns. To facilitate early exploration of the data and focus on more recent, relevant trends, I will reduce the data set size before beginning my analysis. I will do this by only removing redundant and unneeded columns from the dataset and only keeping crimes from the last 10 years. \n",
+    "As of 3/10/2020, the [dataset](https://data.cityofchicago.org/Public-Safety/Crimes-2001-to-present/ijzp-q8t2) provided by the city of Chicago on crime (excluding murders) contains over 7 millions rows and 22 columns. To facilitate early exploration of the data and focus on more recent, relevant trends, I reduced the dataset to the last 10 years, removed unneeded columns, and dropped rows with nulls. The reduced dataset contained just under 3 million rows of crimes  \n",
     "  \n",
-    "I also mapped the Community Area ID's to their name and group (e.g. Community Area 8 maps to Near North Side and Central) based on [this](https://en.wikipedia.org/wiki/Community_areas_in_Chicago) Wikipedia page. "
+    "After reducing the size of the dataset, I cleaned up the text columns by manually matching values of each column with a smaller subset of categories in excel, mapped the Community Area ID's to their name and group (e.g. Community Area 8 maps to Near North Side and Central) based on [this](https://en.wikipedia.org/wiki/Community_areas_in_Chicago) Wikipedia page, and added some categorical columns based on the date of the crime.  "
    ]
   },
   {
@@ -22,6 +22,7 @@
     "- [Cleaning Up Text Columns](#clean_up)\n",
     "- [Pulling in Community Area Names and Regions](#community_areas)\n",
     "- [Creating New Datetime Columns based on the Date of the Crime](#date_columns)\n",
+    "- [Dropping Nulls from the Dataset](#nulls)\n",
     "- [Saving the Cleaned Dataset](#saving)"
    ]
   },
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +300,7 @@
        "5     False            69.0  2013      NaN  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +362,7 @@
        "       'NON-CRIMINAL (SUBJECT SPECIFIED)'], dtype=object)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +393,7 @@
        "       'Other Narcotic Violation'], dtype=object)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +491,7 @@
        "       'WOODED AREA', 'DELIVERY TRUCK'], dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +570,7 @@
        "4       SIDEWALK     Sidewalk"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +693,7 @@
        "4            69.0  2013      NaN            Residence  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +804,7 @@
        "4   6        Lake View  North Side"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +934,7 @@
        "4      NaN            Residence  Greater Grand Crossing          South Side  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1148,7 @@
        "4      Sunday       Night  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,41 +1168,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Saving the Cleaned Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crimes_cleaned.to_csv(\"crimes_cleaned.csv\")"
+    "<a id=\"nulls\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating Input Dataset for Prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Removing Nulls"
+    "## Dropping Nulls from the Dataset\n",
+    "Because of the relatively small number of rows with null values, I'm going to drop all rows with nulls."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number of Rows: 3,007,770\n",
+      "\n",
       "Date has 0 nulls\n",
       "Primary Type has 0 nulls\n",
       "Arrest has 0 nulls\n",
@@ -1218,8 +1208,61 @@
     }
    ],
    "source": [
+    "print(\"Number of Rows: {:,d}\".format(crimes_cleaned.shape[0]))\n",
+    "print()\n",
     "for col in crimes_cleaned.columns:\n",
     "    print(\"{} has {:,d} nulls\".format(col,crimes_cleaned[col].isna().sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Rows: 2,980,876\n",
+      "\n",
+      "Date has 0 nulls\n",
+      "Primary Type has 0 nulls\n",
+      "Arrest has 0 nulls\n",
+      "Domestic has 0 nulls\n",
+      "Year has 0 nulls\n",
+      "Location has 0 nulls\n",
+      "Location Description has 0 nulls\n",
+      "Community Area has 0 nulls\n",
+      "Region has 0 nulls\n",
+      "Month has 0 nulls\n",
+      "Day of Week has 0 nulls\n",
+      "Time of Day has 0 nulls\n"
+     ]
+    }
+   ],
+   "source": [
+    "crimes_cleaned.dropna(inplace=True,axis=0)\n",
+    "\n",
+    "print(\"Number of Rows: {:,d}\".format(crimes_cleaned.shape[0]))\n",
+    "print()\n",
+    "for col in crimes_cleaned.columns:\n",
+    "    print(\"{} has {:,d} nulls\".format(col,crimes_cleaned[col].isna().sum()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving the Cleaned Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crimes_cleaned.to_csv(\"crimes_cleaned.csv\")"
    ]
   }
  ],
