--- a/Crime_Data_Preprocessing.ipynb
+++ b/Crime_Data_Preprocessing.ipynb
@@ -7,7 +7,9 @@
     "# Crime Data Preprocessing\n",
     "As of 3/10/2020, the [dataset](https://data.cityofchicago.org/Public-Safety/Crimes-2001-to-present/ijzp-q8t2) provided by the city of Chicago on crime (excluding murders) contains over 7 millions rows and 22 columns. This [dataset](#https://data.cityofchicago.org/Public-Safety/Homicides/k9xv-yxzs) contained the homicides, about 10,000, from the last 20 years. To facilitate early exploration of the data and focus on more recent, relevant trends, I removed crimes from before 2010, unneeded columns, and rows with nulls. The reduced dataset contained just under 3 million rows of crimes  \n",
     "  \n",
-    "After reducing the size of the dataset, I cleaned up the text columns by manually matching values of each column with a smaller subset of categories in excel, mapped the Community Area ID's to their name and group (e.g. Community Area 8 maps to Near North Side and Central) based on [this](https://en.wikipedia.org/wiki/Community_areas_in_Chicago) Wikipedia page, and added some categorical columns based on the date of the crime.  "
+    "After reducing the size of the dataset, I cleaned up the text columns by manually matching values of each column with a smaller subset of categories in excel, mapped the Community Area ID's to their name and group (e.g. Community Area 8 maps to Near North Side and Central) based on [this](https://en.wikipedia.org/wiki/Community_areas_in_Chicago) Wikipedia page, and added some categorical columns based on the date of the crime.  \n",
+    "\n",
+    "Also added in the Community Area population sizes from the [2010 Census](https://www.chicago.gov/content/dam/city/depts/zlup/Zoning_Main_Page/Publications/Census_2010_Community_Area_Profiles/Census_2010_and_2000_CA_Populations.pdf) to allow for an approximated Crimes/Homicides per Capita calculation. Unfortunately, this data isn't provided year over year and as of 3/30/2020, the 2020 Census isn't available, which is why I needed to use 2010 population sizes."
    ]
   },
   {
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +99,6 @@
     "import datetime as dt\n",
     "\n",
     "import warnings\n",
-    "\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 84,
    "metadata": {
     "scrolled": false
    },
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +322,7 @@
        "5     False            69.0  2013      NaN  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +384,7 @@
        "       'NON-CRIMINAL (SUBJECT SPECIFIED)'], dtype=object)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +415,7 @@
        "       'Other Narcotic Violation'], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +513,7 @@
        "       'WOODED AREA', 'DELIVERY TRUCK'], dtype=object)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +592,7 @@
        "4       SIDEWALK     Sidewalk"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +715,7 @@
        "4  2013      NaN            Residence  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -779,6 +780,7 @@
        "      <th>ID</th>\n",
        "      <th>Name</th>\n",
        "      <th>Region</th>\n",
+       "      <th>2010 Population</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -787,45 +789,50 @@
        "      <td>8</td>\n",
        "      <td>Near North Side</td>\n",
        "      <td>Central</td>\n",
+       "      <td>80484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>32</td>\n",
        "      <td>Loop</td>\n",
        "      <td>Central</td>\n",
+       "      <td>29283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>33</td>\n",
        "      <td>Near South Side</td>\n",
        "      <td>Central</td>\n",
+       "      <td>21390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>5</td>\n",
        "      <td>North Center</td>\n",
        "      <td>North Side</td>\n",
+       "      <td>31867</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>6</td>\n",
        "      <td>Lake View</td>\n",
        "      <td>North Side</td>\n",
+       "      <td>94368</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID             Name      Region\n",
-       "0   8  Near North Side     Central\n",
-       "1  32             Loop     Central\n",
-       "2  33  Near South Side     Central\n",
-       "3   5     North Center  North Side\n",
-       "4   6        Lake View  North Side"
+       "   ID             Name      Region  2010 Population\n",
+       "0   8  Near North Side     Central            80484\n",
+       "1  32             Loop     Central            29283\n",
+       "2  33  Near South Side     Central            21390\n",
+       "3   5     North Center  North Side            31867\n",
+       "4   6        Lake View  North Side            94368"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -872,6 +879,7 @@
        "      <th>Location Description</th>\n",
        "      <th>Community Area</th>\n",
        "      <th>Region</th>\n",
+       "      <th>2010 Population</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -886,6 +894,7 @@
        "      <td>Residence</td>\n",
        "      <td>Washington Heights</td>\n",
        "      <td>Far Southwest Side</td>\n",
+       "      <td>26493.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -898,6 +907,7 @@
        "      <td>Other</td>\n",
        "      <td>Ashburn</td>\n",
        "      <td>Far Southwest Side</td>\n",
+       "      <td>41081.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -910,6 +920,7 @@
        "      <td>Residence</td>\n",
        "      <td>Woodlawn</td>\n",
        "      <td>South Side</td>\n",
+       "      <td>25983.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -922,6 +933,7 @@
        "      <td>Hotel/Motel</td>\n",
        "      <td>Loop</td>\n",
        "      <td>Central</td>\n",
+       "      <td>29283.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -934,6 +946,7 @@
        "      <td>Residence</td>\n",
        "      <td>Greater Grand Crossing</td>\n",
        "      <td>South Side</td>\n",
+       "      <td>32602.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -947,15 +960,22 @@
        "3 2017-08-26 10:00:00  Crim Sexual Assault   False     False  2017      NaN   \n",
        "4 2013-02-10 00:00:00  Crim Sexual Assault   False     False  2013      NaN   \n",
        "\n",
-       "  Location Description          Community Area              Region  \n",
-       "0            Residence      Washington Heights  Far Southwest Side  \n",
-       "1                Other                 Ashburn  Far Southwest Side  \n",
-       "2            Residence                Woodlawn          South Side  \n",
-       "3          Hotel/Motel                    Loop             Central  \n",
-       "4            Residence  Greater Grand Crossing          South Side  "
+       "  Location Description          Community Area              Region  \\\n",
+       "0            Residence      Washington Heights  Far Southwest Side   \n",
+       "1                Other                 Ashburn  Far Southwest Side   \n",
+       "2            Residence                Woodlawn          South Side   \n",
+       "3          Hotel/Motel                    Loop             Central   \n",
+       "4            Residence  Greater Grand Crossing          South Side   \n",
+       "\n",
+       "   2010 Population  \n",
+       "0          26493.0  \n",
+       "1          41081.0  \n",
+       "2          25983.0  \n",
+       "3          29283.0  \n",
+       "4          32602.0  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1064,6 +1084,7 @@
        "      <th>Location Description</th>\n",
        "      <th>Community Area</th>\n",
        "      <th>Region</th>\n",
+       "      <th>2010 Population</th>\n",
        "      <th>Month</th>\n",
        "      <th>Day of Week</th>\n",
        "      <th>Time of Day</th>\n",
@@ -1082,6 +1103,7 @@
        "      <td>Residence</td>\n",
        "      <td>Washington Heights</td>\n",
        "      <td>Far Southwest Side</td>\n",
+       "      <td>26493.0</td>\n",
        "      <td>10</td>\n",
        "      <td>Sunday</td>\n",
        "      <td>Night</td>\n",
@@ -1098,6 +1120,7 @@
        "      <td>Other</td>\n",
        "      <td>Ashburn</td>\n",
        "      <td>Far Southwest Side</td>\n",
+       "      <td>41081.0</td>\n",
        "      <td>3</td>\n",
        "      <td>Tuesday</td>\n",
        "      <td>Afternoon</td>\n",
@@ -1114,6 +1137,7 @@
        "      <td>Residence</td>\n",
        "      <td>Woodlawn</td>\n",
        "      <td>South Side</td>\n",
+       "      <td>25983.0</td>\n",
        "      <td>9</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>Night</td>\n",
@@ -1130,6 +1154,7 @@
        "      <td>Hotel/Motel</td>\n",
        "      <td>Loop</td>\n",
        "      <td>Central</td>\n",
+       "      <td>29283.0</td>\n",
        "      <td>8</td>\n",
        "      <td>Saturday</td>\n",
        "      <td>Afternoon</td>\n",
@@ -1146,6 +1171,7 @@
        "      <td>Residence</td>\n",
        "      <td>Greater Grand Crossing</td>\n",
        "      <td>South Side</td>\n",
+       "      <td>32602.0</td>\n",
        "      <td>2</td>\n",
        "      <td>Sunday</td>\n",
        "      <td>Night</td>\n",
@@ -1163,22 +1189,22 @@
        "3 2017-08-26 10:00:00  Crim Sexual Assault   False     False  2017      NaN   \n",
        "4 2013-02-10 00:00:00  Crim Sexual Assault   False     False  2013      NaN   \n",
        "\n",
-       "  Location Description          Community Area              Region  Month  \\\n",
-       "0            Residence      Washington Heights  Far Southwest Side     10   \n",
-       "1                Other                 Ashburn  Far Southwest Side      3   \n",
-       "2            Residence                Woodlawn          South Side      9   \n",
-       "3          Hotel/Motel                    Loop             Central      8   \n",
-       "4            Residence  Greater Grand Crossing          South Side      2   \n",
+       "  Location Description          Community Area              Region  \\\n",
+       "0            Residence      Washington Heights  Far Southwest Side   \n",
+       "1                Other                 Ashburn  Far Southwest Side   \n",
+       "2            Residence                Woodlawn          South Side   \n",
+       "3          Hotel/Motel                    Loop             Central   \n",
+       "4            Residence  Greater Grand Crossing          South Side   \n",
        "\n",
-       "  Day of Week Time of Day  Season  \n",
-       "0      Sunday       Night    Fall  \n",
-       "1     Tuesday   Afternoon  Spring  \n",
-       "2    Saturday       Night    Fall  \n",
-       "3    Saturday   Afternoon  Summer  \n",
-       "4      Sunday       Night  Winter  "
+       "   2010 Population  Month Day of Week Time of Day  Season  \n",
+       "0          26493.0     10      Sunday       Night    Fall  \n",
+       "1          41081.0      3     Tuesday   Afternoon  Spring  \n",
+       "2          25983.0      9    Saturday       Night    Fall  \n",
+       "3          29283.0      8    Saturday   Afternoon  Summer  \n",
+       "4          32602.0      2      Sunday       Night  Winter  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "metadata": {
     "scrolled": true
    },
@@ -1231,42 +1257,7 @@
       "Location Description has 6,194 nulls\n",
       "Community Area has 431 nulls\n",
       "Region has 431 nulls\n",
-      "Month has 0 nulls\n",
-      "Day of Week has 0 nulls\n",
-      "Time of Day has 0 nulls\n",
-      "Season has 0 nulls\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Number of Rows: {:,d}\".format(crimes_cleaned.shape[0]))\n",
-    "print()\n",
-    "for col in crimes_cleaned.columns:\n",
-    "    print(\"{} has {:,d} nulls\".format(col,crimes_cleaned[col].isna().sum()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of Rows: 3,011,993\n",
-      "\n",
-      "Date has 0 nulls\n",
-      "Primary Type has 0 nulls\n",
-      "Arrest has 0 nulls\n",
-      "Domestic has 0 nulls\n",
-      "Year has 0 nulls\n",
-      "Location has 22,299 nulls\n",
-      "Location Description has 6,194 nulls\n",
-      "Community Area has 431 nulls\n",
-      "Region has 431 nulls\n",
+      "2010 Population has 431 nulls\n",
       "Month has 0 nulls\n",
       "Day of Week has 0 nulls\n",
       "Time of Day has 0 nulls\n",
@@ -1326,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
