Remove indeces from output csv files

--- a/Crime_Data_Preprocessing.ipynb
+++ b/Crime_Data_Preprocessing.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "5     False            69.0  2013      NaN  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "       'NON-CRIMINAL (SUBJECT SPECIFIED)'], dtype=object)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "       'Other Narcotic Violation'], dtype=object)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "       'WOODED AREA', 'DELIVERY TRUCK'], dtype=object)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "4       SIDEWALK     Sidewalk"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "4  2013      NaN            Residence  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
        "4   6        Lake View  North Side            94368"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "4          32602.0  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
        "4          32602.0      2      Sunday       Night  Winter  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1292,6 +1292,7 @@
       "Location Description has 0 nulls\n",
       "Community Area has 0 nulls\n",
       "Region has 0 nulls\n",
+      "2010 Population has 0 nulls\n",
       "Month has 0 nulls\n",
       "Day of Week has 0 nulls\n",
       "Time of Day has 0 nulls\n",
@@ -1317,11 +1318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "crimes_cleaned.to_csv(\"Data/crimes_cleaned.csv\")"
+    "crimes_cleaned.to_csv(\"Data/crimes_cleaned.csv\", index=False)"
    ]
   },
   {
@@ -1341,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1373,6 +1374,7 @@
        "      <th>Season</th>\n",
        "      <th>Community Area</th>\n",
        "      <th>Number of Crimes</th>\n",
+       "      <th>2010 Population</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1386,6 +1388,7 @@
        "      <td>Winter</td>\n",
        "      <td>Greater Grand Crossing</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1396,6 +1399,7 @@
        "      <td>Southwest Side</td>\n",
        "      <td>Winter</td>\n",
        "      <td>West Englewood</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1408,6 +1412,7 @@
        "      <td>Winter</td>\n",
        "      <td>Loop</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1419,6 +1424,7 @@
        "      <td>Winter</td>\n",
        "      <td>Forest Glen</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1429,6 +1435,7 @@
        "      <td>Southwest Side</td>\n",
        "      <td>Winter</td>\n",
        "      <td>Englewood</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1443,15 +1450,15 @@
        "3  2010      1        Arson                           Church  Far North Side   \n",
        "4  2010      1        Arson                      Gas Station  Southwest Side   \n",
        "\n",
-       "   Season          Community Area  Number of Crimes  \n",
-       "0  Winter  Greater Grand Crossing                 1  \n",
-       "1  Winter          West Englewood                 1  \n",
-       "2  Winter                    Loop                 1  \n",
-       "3  Winter             Forest Glen                 1  \n",
-       "4  Winter               Englewood                 1  "
+       "   Season          Community Area  Number of Crimes  2010 Population  \n",
+       "0  Winter  Greater Grand Crossing                 1                1  \n",
+       "1  Winter          West Englewood                 1                1  \n",
+       "2  Winter                    Loop                 1                1  \n",
+       "3  Winter             Forest Glen                 1                1  \n",
+       "4  Winter               Englewood                 1                1  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1503,11 +1510,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "crimes_agg.to_csv('Data/crimes_aggregated.csv')"
+    "crimes_agg.to_csv('Data/crimes_aggregated.csv', index=False)"
    ]
   }
  ],
