Start plotting arrest rates

--- a/Data_Exploration.ipynb
+++ b/Data_Exploration.ipynb
@@ -20,8 +20,11 @@
     "* [Reading in Cleaned Dataset](#read_data)\n",
     "* [Retrieving Region and Community Area Populations for Normalizing Counts](#populations)\n",
     "* [Plotting Function](#plot_func)\n",
+    "* [Arrests Rates for All Crimes and Homicides](#arrests)\n",
     "* [All Crimes and Homicides by Region](#region)\n",
     "* [All Crimes and Homicides by Community Area](#comm_areas)\n",
+    "* [Arrest Rates by Region](#arrests_region)\n",
+    "* [Arrest Rates by Community Area](#arrests_comm_areas)\n",
     "* [Crimes and Homicides by Date Columns](#dates)  \n",
     "    - [Date](#date)  \n",
     "    - [Time of Day](#time)  \n",
@@ -511,6 +514,44 @@
     "    ax.yaxis.set_major_formatter(StrMethodFormatter(y_format))\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"arrests\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Arrest Rates by All Crimes and Homicides"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#grouping all crimes by region\n",
+    "arrests_region_counts = crimes.groupby(['Region']).mean().iloc[:,0].sort_values(ascending=False).reset_index()\n",
+    "arrests_region_counts.columns = [\"Region\", \"Crimes\"]\n",
+    "\n",
+    "#normalizing counts with 2010 Population\n",
+    "arrests_region_counts = arrests_region_counts.merge(region_pop, how='inner', on='Region') \n",
+    "arrests_region_counts['Crimes per Capita'] = arrests_region_counts['Crimes'] / arrests_region_counts['2010 Population']\n",
+    "arrests_region_counts.drop(labels=['2010 Population'], axis=1, inplace=True)\n",
+    "arrests_region_counts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
