Remove most recent 4 months

--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -19,7 +19,7 @@
     "## Table of Contents\n",
     "- [Dataset Description](#original_desc)  \n",
     "- [Reading in the Original Datasets and Combining Them](#read_in)  \n",
-    "- [Removing Crimes from before 10 Years Ago](#remove_10_years)  \n",
+    "- [Reducing the Number of Crimes](#reduce)  \n",
     "- [Removing Unneeded Columns](#unneeded_columns)\n",
     "- [Cleaning Up Text Columns](#clean_up)\n",
     "- [Pulling in Community Area Names and Regions](#community_areas)\n",
@@ -90,12 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import datetime as dt\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,37 +162,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"remove_10_years\">"
+    "<a id=\"reduce\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Removing Crimes from Before 2010"
+    "## Reducing the Number of Crimes\n",
+    "\n",
+    "Because of the large size of the original dataset, I am removing crimes from before 2010 to allow for relevant inferences to the present. And because I plan to create a machine learning model predicting whether an arrest will be made for a crime, I am also removing the most recent 4 months of crimes so as to only include crimes that have had what I believe to be a reasonable amount of time to make an arrest."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There were 3,011,993 of Crimes from 2010-01-01 00:00:00 to 2020-02-29 23:59:00\n"
+      "There were 2,950,880 of Crimes from 2010-01-01 00:00:00 to 2019-11-25 00:00:00\n"
      ]
     }
    ],
    "source": [
-    "#removing crimes from over 10 years ago\n",
-    "crimes_cleaned = crimes[crimes.Year >= 2010].copy()\n",
+    "#getting date of 4 months ago\n",
+    "date_4months_prev = dt.date.today() + relativedelta(months=-4)\n",
     "\n",
-    "#dropping March 2020 crimes as there isn't a full month of data\n",
-    "crimes_cleaned.drop(crimes_cleaned[(crimes_cleaned.Date.dt.month == 3) & (crimes.Year == 2020)].index, axis=0, inplace=True)\n",
+    "#removing crimes from over 10 years ago and the most recent 4 months\n",
+    "crimes_cleaned = crimes[(crimes.Year >= 2010) & (crimes.Date <= date_4months_prev)].copy()\n",
     "\n",
     "#displaying the results\n",
     "print(\"There were {:,d} of Crimes from {} to {}\".format(crimes_cleaned.shape[0],\n",
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +326,7 @@
        "5     False            69.0  2013      NaN  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +388,7 @@
        "       'NON-CRIMINAL (SUBJECT SPECIFIED)'], dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +419,7 @@
        "       'Other Narcotic Violation'], dtype=object)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -504,19 +505,19 @@
        "       'CTA \"L\" PLATFORM', 'NEWSSTAND', 'TRAILER', 'GANGWAY',\n",
        "       'BARBER SHOP/BEAUTY SALON', 'GARAGE', 'HOTEL', 'STAIRWELL',\n",
        "       'VEHICLE-COMMERCIAL - ENTERTAINMENT/PARTY BUS', 'CHA PARKING LOT',\n",
-       "       'HALLWAY', 'CTA SUBWAY STATION', 'HORSE STABLE', 'DRIVEWAY',\n",
-       "       'CTA PROPERTY', 'VESTIBULE', 'TAVERN', 'LIQUOR STORE', 'MOTEL',\n",
-       "       'LAKE', 'CLUB', 'BASEMENT', 'GAS STATION DRIVE/PROP.',\n",
-       "       'CHA PLAY LOT', 'PUBLIC HIGH SCHOOL', 'TAXI CAB', 'SCHOOL YARD',\n",
-       "       'RIVER', 'CHURCH PROPERTY', 'GARAGE/AUTO REPAIR', 'NURSING HOME',\n",
-       "       'SEWER', 'GOVERNMENT BUILDING', 'OFFICE', 'TRUCK', 'ELEVATOR',\n",
-       "       'POOLROOM', 'LAUNDRY ROOM', 'CLEANERS/LAUNDROMAT',\n",
+       "       'HALLWAY', 'DRIVEWAY', 'HORSE STABLE', 'TAVERN', 'LIQUOR STORE',\n",
+       "       'MOTEL', 'LAKE', 'CLUB', 'BASEMENT', 'GAS STATION DRIVE/PROP.',\n",
+       "       'CHA PLAY LOT', 'PUBLIC HIGH SCHOOL', 'TAXI CAB', 'VESTIBULE',\n",
+       "       'SCHOOL YARD', 'RIVER', 'CHURCH PROPERTY', 'GARAGE/AUTO REPAIR',\n",
+       "       'NURSING HOME', 'SEWER', 'GOVERNMENT BUILDING', 'OFFICE', 'TRUCK',\n",
+       "       'ELEVATOR', 'POOLROOM', 'LAUNDRY ROOM', 'CLEANERS/LAUNDROMAT',\n",
        "       'EXPRESSWAY EMBANKMENT', 'HOSPITAL', 'CTA \"L\" TRAIN', 'LAGOON',\n",
-       "       'CHA HALLWAY', 'CHURCH', 'RIVER BANK', 'ROOMING HOUSE', 'YMCA',\n",
-       "       'WOODED AREA', 'DELIVERY TRUCK'], dtype=object)"
+       "       'CHA HALLWAY', 'CTA PROPERTY', 'CHURCH', 'RIVER BANK',\n",
+       "       'ROOMING HOUSE', 'YMCA', 'WOODED AREA', 'DELIVERY TRUCK'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +596,7 @@
        "4       SIDEWALK     Sidewalk"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +719,7 @@
        "4  2013      NaN            Residence  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +836,7 @@
        "4   6        Lake View  North Side            94368"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +979,7 @@
        "4          32602.0  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1208,7 @@
        "4          32602.0      2      Sunday       Night  Winter  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -1249,18 +1250,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Rows: 3,011,993\n",
+      "Number of Rows: 2,950,880\n",
       "\n",
       "Date has 0 nulls\n",
       "Primary Type has 0 nulls\n",
       "Arrest has 0 nulls\n",
       "Domestic has 0 nulls\n",
       "Year has 0 nulls\n",
-      "Location has 22,299 nulls\n",
-      "Location Description has 6,194 nulls\n",
-      "Community Area has 431 nulls\n",
-      "Region has 431 nulls\n",
-      "2010 Population has 431 nulls\n",
+      "Location has 21,841 nulls\n",
+      "Location Description has 5,974 nulls\n",
+      "Community Area has 428 nulls\n",
+      "Region has 428 nulls\n",
+      "2010 Population has 428 nulls\n",
       "Month has 0 nulls\n",
       "Day of Week has 0 nulls\n",
       "Time of Day has 0 nulls\n",
@@ -1277,14 +1278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Rows: 2,985,145\n",
+      "Number of Rows: 2,924,694\n",
       "\n",
       "Date has 0 nulls\n",
       "Primary Type has 0 nulls\n",
@@ -1321,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
