--- a/Predicting_Arrests.ipynb
+++ b/Predicting_Arrests.ipynb
@@ -9,6 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading in Cleaned Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -507,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feed Forward Neural Network"
+    "### Feed-Forward Neural Network"
    ]
   },
   {
