Replace location column with separate latitude and longitude columns

--- a/Data_Exploration.ipynb
+++ b/Data_Exploration.ipynb
@@ -74,7 +74,8 @@
     "| Arrest               | Indicates whether an arrest was made |\n",
     "| Domestic             | Indicates whether the incident was domestic-related as defined by the Illinois Domestic Violence act |\n",
     "| Year                 | The year the incident occurred |\n",
-    "| Location             | The location where the incident occurred in a format that allows for creation of maps and other geographic operations on this data portal. This location is shifted from the actual location for partial redaction but falls on the same block |\n",
+    "| Latitude             | The latitude of the location where the incident occurred. This location is shifted from the actual location for partial redaction but falls on the same block |\n",
+    "| Longitude            | The longitude of the location where the incident occurred. This location is shifted from the actual location for partial redaction but falls on the same block |\n",
     "| Location Description | Description of the location where the incident occurred |\n",
     "| Community Area       | Indicates the community area where the incident occurred (Chicago has 77 community areas) |\n",
     "| Region               | Indicates the region of Chicago where the incident occurred |\n",
